# ircd

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  2.9-New  Makefile  configure
.github/workflows/: clangformat.yml
common/: ChangeLog  Makefile  bsd.c  bsd_ext.h  class_def.h  common_def.h  dbuf.c  dbuf_def.h  dbuf_ext.h  inet_addr.c  irc_sprintf.c  irc_sprintf_body.c  irc_sprintf_ext.h  match.c  match_ext.h  msg_def.h  numeric_def.h  os.h  packet.c  packet_ext.h  parse.c  parse_ext.h  patchlevel.h  send.c  send_ext.h  struct_def.h  support.c  support_def.h  support_ext.h
contrib/: README  RULES  alis.README  antispoof.README  antispoof.diff  ircd.service
contrib/ircdwatch/: README  ircdwatch.8  ircdwatch.c
contrib/mkpasswd/: Makefile  README  crypter  mkpasswd.c
contrib/mod_passwd/: README  mod_passwd.c
contrib/tkserv/: CHANGES  CREDITS  INSTALL  README  proto.h  tkserv.access.example  tkserv.c
doc/: 2.10-New  2.11-New  Authors  BUGS  CVS3.txt  ChangeLog  Etiquette  INSTALL  INSTALL.appendix  INSTALL.info  INSTALL.sgml  INSTALL.txt  IRCNet  ISO-3166-1  Makefile  NOTE  README  RELEASE_LOG  RELEASE_NOTES  SERVICE.sgml  SERVICE.txt  alt-irc-faq  confsplit.txt  iauth-internals.txt  iauth.8  iauth.conf.5  iauth.conf.example  irc.1  ircd.8  ircd.conf.example  m4macros  sasl.md  sasl_original.md  stats.info  stats.sgml  stats.txt  whoistls.txt  whox.md
doc/Europe/: CoordEBIC  IRCNO  RulesEBIC  links.eu
doc/Juped/: Advertisement  ChangeLog.doc  ChangeLog.include  INSTALL
doc/Nets/: IRCNet
doc/Nets/Europe/: InfoEBIC  rules
doc/US-Admin/: Networking
iauth/: a_conf.c  a_conf_def.h  a_conf_ext.h  a_defines.h  a_externs.h  a_io.c  a_io_ext.h  a_log.c  a_log_def.h  a_log_ext.h  a_struct_def.h  iauth.c  mod_dnsbl.c  mod_dnsbl_ext.h  mod_lhex.c  mod_lhex_ext.h  mod_pipe.c  mod_pipe_ext.h  mod_rfc931.c  mod_rfc931_ext.h  mod_socks.c  mod_socks_ext.h  mod_webproxy.c  mod_webproxy_ext.h
include/: bitypes.h  cdefs.h  channel.h  class.h  common.h  config.h.dist  dbuf.h  h.h  hash.h  inet.h  msg.h  nameser.h  netdb.h  numeric.h  patchlevel.h  portability.h  res.h  resolv.h  service.h  setup.h.in  sock.h  struct.h  sys.h  whowas.h
irc/: ChangeLog  c_bsd.c  c_bsd_ext.h  c_conf.c  c_conf_ext.h  c_debug.c  c_debug_ext.h  c_defines.h  c_externs.h  c_msg.c  c_msg_ext.h  c_numeric.c  c_numeric_ext.h  c_version.c  c_version_ext.h  ctcp.c  ctcp_ext.h  edit.c  edit_ext.h  help.c  help.h  help_def.h  help_ext.h  ignore.c  ignore_ext.h  irc.c  irc.h  irc_def.h  irc_ext.h  screen.c  screen_ext.h  str.c  str_ext.h  swear.c  swear_ext.h
ircd/: ChangeLog  buildm4  channel.c  channel_def.h  channel_ext.h  chkconf.c  class.c  class_ext.h  config_read.c  fileio.c  fileio.h  hash.c  hash_def.h  hash_ext.h  irc_sprintf.c  ircd.c  ircd_ext.h  list.c  list2.c  list_ext.h  nameser_def.h  note.c  patricia.c  patricia_ext.h  res.c  res_comp.c  res_comp_ext.h  res_def.h  res_ext.h  res_init.c  res_init_ext.h  res_mkquery.c  res_mkquery_ext.h  resolv_def.h  s_auth.c  s_auth_ext.h  s_bsd.c  s_bsd.c.1  s_bsd_ext.h  s_cap.c  (+35 more)
ircd/crypt/: Makefile  README  crypter  mkpasswd.c  sums.in
support/: Makefile.in  Makefile.irc  Makefile.ircd  acconfig.h  bsdinstall  config.guess  config.h.dist  configure  configure.in  install-sh  ircd.motd  mkdirhier  rev.sh  setup.h.in  sums.in  tkconf.h.dist
